--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Comic Sans MS';
+    font-family: Arial;
     text-align: center;
     color: white;
 }
@@ -9,8 +9,10 @@
 body{
     background-image: url('vaporwave.png');
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 h1{
    font-family: monospace;
+   margin: 10vh 0 5vh;
 }
