--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: url('vaporwave.png');
+    background-image: url('background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
