--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     font-family: Arial;
     text-align: center;
-    color: white;
+    color: black;
 }
 
 body{
@@ -12,7 +12,15 @@ body{
     background-repeat: no-repeat;
 }
 
+main{
+    margin: 5vh auto;
+    width: 50vw;
+    padding: 5vh;
+    border-radius: 2vw;
+    background: rgba(255, 255, 255, 0.5);
+}
+
 h1{
    font-family: monospace;
-   margin: 10vh 0 5vh;
+   margin: 0 0 5vh;
 }
